src/objects/loan__Fee_Order__c.object
<CustomObject>
    <fields>
        <fullName>loan__Fee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fee</label>
        <referenceTo>loan__Fee__c</referenceTo>
        <relationshipLabel>Fee Order</relationshipLabel>
        <relationshipName>Fee_Order</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Lending_Product__c</fullName>
        <label>Lending Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipLabel>Fee Order</relationshipLabel>
        <relationshipName>Fee_Order</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Order_Number__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fee Order</label>
    <nameField>
        <displayFormat>FOID-{00000}</displayFormat>
        <label>Fee Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Order_number_should_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Order_Number__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>loan__Order_Number__c</errorDisplayField>
        <errorMessage>Sort Order should cannot be nonpositive.</errorMessage>
    </validationRules>
</CustomObject>